potion z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -130,4 +130,7 @@
 .potion{
   width: 10vw;
   height: auto;
+  cursor: pointer;
+  z-index: 3;
+  position: absolute;
 }
